# you-api

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  dependencies.py  handler_embedding.py  handler_narrative.py  handler_phase.py  logging_config.py  main.py  requirements.txt
app/embedding/: embedding_client.py  embedding_port.py  in_memory_embedding_client.py  openai_embedding_client.py
app/llm/: in_memory_llm_client.py  llm_client.py  openai_llm_client.py
app/models/: entry.py  entry_tags.py  narrative.py  phase.py  qa.py  summary.py
app/ports/: in_memory_embedding_client.py  openai_embedding_client.py
app/repositories/: dynamodb_entry_repository.py  entry_repository.py  in_memory_entry_repository.py  in_memory_narrative_repository.py  narrative_repository.py  (+3 more)
docs/: narrative-recap.md  phase2-dashboard.md  rag-plan.md  tagging-plan.md
http/: entries.http
infra/: app.py  cdk.json  requirements.txt
scripts/: setup_pinecone.py
tests/: test_dependencies.py  test_dynamodb_entry_repository.py  test_entries_router.py  test_entry_service.py  test_handler_embedding.py  test_handler_narrative.py  test_handler_phase.py  test_in_memory_embedding_client.py  test_in_memory_tag_extraction_client.py  test_in_memory_vector_repository.py  test_integration_tagging.py  test_narrative_router.py  test_narrative_service.py  test_openai_embedding_client.py  test_openai_llm_client.py  test_openai_tag_extraction_client.py  test_phase_service.py  test_phases_router.py  test_pinecone_vector_repository.py  test_qa_service.py
(+12 files in other folders)
