[project]
name = "you-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "mangum>=0.17.0",
]

[dependency-groups]
dev = [
    "boto3-stubs~=1.43.6",
    "aws-cdk-lib>=2.100.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
